[package]
name          = "okaeri-sdk"
version       = "1.0.0"
authors       = ["Dawid Sawicki <dawid@okaeri.eu>"]
license       = "AGPL-3.0"
readme        = "README.md"
repository    = "https://github.com/OkaeriPoland/okaeri-sdk-rust"
homepage      = "https://github.com/OkaeriPoland/okaeri-sdk-rust#readme"
documentation = "https://github.com/OkaeriPoland/okaeri-sdk-rust#readme"
description   = "Okaeri Services SDK"
keywords      = ["api"]
categories    = ["api-bindings"]
edition       = "2018"
include       = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "src/**/*.rs",
]

[dependencies]
url = "2.2.1"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14.4", features = ["full"]}
hyper-tls = "0.5.0"
hyper-timeout = "0.4.1"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"]}
serde_derive = "1.0.124"
maplit = "1.0.2"
